# wayland-rs

./: .cirrus.yml  .gitignore  .gitmodules  .mailmap  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  RELEASING.md  book.toml  crates.js  deny.toml  doc_index.html  doc_upload.py  doc_upload.sh  help.html  historical_changelog.md  index.html  run_kcov.sh  rustfmt.toml  search-index.js  settings.html  src-files.js  travis_install_wayland.sh  tweak-cargo-tomls.sh  update-docs.sh
scanner/: Cargo.toml
scanner/src/: client_gen.rs  common_gen.rs  interface_gen.rs  lib.rs  main.rs  parse.rs  protocol.rs  server_gen.rs
wayland-backend/: CHANGELOG.md  Cargo.toml  README.md  build.rs
wayland-backend-rs/: Cargo.toml
wayland-backend-rs/src/: debug.rs  lib.rs  map.rs  socket.rs  wire.rs
wayland-backend-rs/src/client/: mod.rs
wayland-backend-rs/src/server/: client.rs  common_poll.rs  handle.rs  independent.rs  mod.rs  registry.rs
wayland-backend-sys/: Cargo.toml  build.rs
wayland-backend-sys/src/: lib.rs
wayland-backend-sys/src/client/: mod.rs
wayland-backend-sys/src/server/: log_shim.c  mod.rs
wayland-backend-test/: Cargo.toml
wayland-backend-test/src/: lib.rs  many_args.rs  object_args.rs  protocol_error.rs  server_created_objects.rs  sync.rs
wayland-backend/src/: client_api.rs  core_interfaces.rs  debug.rs  lib.rs  protocol.rs  server_api.rs
wayland-backend/src/rs/: debug.rs  map.rs  mod.rs  socket.rs  wire.rs
wayland-backend/src/sys/: mod.rs
wayland-backend/src/test/: destroy_object.rs  destructors.rs  many_args.rs  mod.rs  object_args.rs  protocol_error.rs  server_created_objects.rs  sync.rs
wayland-backend/src/types/: client.rs  mod.rs  server.rs
wayland-backend/tests/: null_object.rs  rs_sys_impls.rs
wayland-client/: CHANGELOG.md  Cargo.toml  README.md  README.txt  build.rs  wayland.xml
wayland-client/examples/: delegated.rs  dynamic_globals.rs  gtk_list_globals.rs  list_globals.rs  list_globals_no_dispatch.rs  simple_client.rs  simple_layershell.rs  simple_window.rs  simple_window_async.rs
wayland-client/src/: async_event_queue.rs  calloop.rs  conn.rs  cursor.rs  cx.rs  display.rs  egl.rs  env.rs  event_queue.rs  events.rs  global.rs  globals.rs  lib.rs  proxy.rs  proxy_internals.rs  sinks.rs  wayland.rs  xdg_shell.rs
wayland-client/src/extensions/: desktop_shell.rs  mod.rs  presentation_time.rs  viewporter.rs  xdg_shell.rs
wayland-client/src/native_lib/: display.rs  event_queue.rs  mod.rs  proxy.rs
wayland-client/src/rust_imp/: connection.rs  display.rs  mod.rs  proxy.rs  queues.rs
wayland-client/src/sys/: desktop_shell.rs  mod.rs  presentation_time.rs  viewporter.rs  wayland.rs  xdg_shell.rs
wayland-commons/: Cargo.toml  README.md  README.txt
wayland-commons/examples/: manual_global_list.rs
wayland-commons/src/: client.rs  core_interfaces.rs  dispatching.rs  filter.rs  lib.rs  map.rs  server.rs  sinks.rs  socket.rs  user_data.rs  utils.rs  wire.rs
wayland-commons/src/backend_api/: mod.rs
wayland-commons/src/scanner/: mod.rs  protocol.rs
wayland-cursor/: CHANGELOG.md  Cargo.toml  README.md  README.txt
wayland-cursor/src/: lib.rs
wayland-egl/: CHANGELOG.md  Cargo.toml  README.md  README.txt
wayland-egl/src/: lib.rs
wayland-protocols/: CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  README.txt  build.rs
wayland-protocols-experimental/: CHANGELOG.md  Cargo.toml  README.md
wayland-protocols-experimental/protocols/: README.md
wayland-protocols-experimental/protocols/xx-input-method/: README  xx-input-method-v2.xml  xx-input-method-v2.xml.orig
wayland-protocols-experimental/protocols/xx-keyboard-filter/: README  xx-keyboard-filter-v1.xml
wayland-protocols-experimental/protocols/xx-text-input/: README  xx-text-input-v3.xml
wayland-protocols-experimental/src/: lib.rs  xx.rs
wayland-protocols-plasma/: CHANGELOG.md  Cargo.toml  README.md
wayland-protocols-plasma/src/: lib.rs
wayland-protocols-wlr/: CHANGELOG.md  Cargo.toml  README.md
wayland-protocols-wlr/src/: lib.rs  protocol_macro.rs
wayland-protocols/misc/: server-decoration.xml
wayland-protocols/src/: ext.rs  lib.rs  misc.rs  presentation_time.rs  protocol_macro.rs  stable.rs  staging.rs  unstable.rs  viewporter.rs  wall.rs  wlr.rs  wp.rs  xdg.rs  xwayland.rs  xx.rs
wayland-scanner/: CHANGELOG.md  Cargo.toml  README.md  README.txt  update-tests.sh
wayland-scanner/src/: aliases_gen.rs  c_code_gen.rs  c_interface_gen.rs  c_interfaces.rs  client_gen.rs  code_gen.rs  common.rs  common_gen.rs  interface_gen.rs  interfaces.rs  lib.rs  parse.rs  protocol.rs  rust_code_gen.rs  server_gen.rs  side.rs  token.rs  util.rs
wayland-scanner/tests/scanner_assets/: test-client-code.rs  test-headerless-protocol.xml  test-interfaces.rs  test-protocol.xml  test-server-code.rs
wayland-server/: CHANGELOG.md  Cargo.toml  README.md  README.txt  build.rs  protocols  wayland.xml
wayland-server/examples/: delegated.rs  simple_server.rs
wayland-server/src/: client.rs  desktop_shell.rs  dispatch.rs  display.rs  event_loop.rs  event_sources.rs  global.rs  globals.rs  lib.rs  requests.rs  resource.rs  socket.rs  sources.rs  wayland.rs  xdg_shell.rs
wayland-server/src/native_lib/: client.rs  display.rs  event_loop.rs  globals.rs  mod.rs  resource.rs  source.rs
wayland-server/src/rust_imp/: clients.rs  display.rs  globals.rs  (+4 more)
wayland-sys/: CHANGELOG.md  Cargo.toml  README.md  README.txt  build.rs
wayland-sys/src/: client.rs  common.rs  cursor.rs  egl.rs  lib.rs  server.rs
wayland-tests/: Cargo.toml
wayland-tests/src/: globals.rs  lib.rs
wayland-tests/tests/: attach_to_surface.rs  backend_socket_out_limits.rs  buffer_size.rs  client_bad_requests.rs  client_connect_to_env.rs  client_connect_to_socket.rs  client_dispatch.rs  client_globals_helpers.rs  client_multithread.rs  client_proxies.rs  destroyed_object.rs  destructors.rs  display_ptr.rs  globals.rs  protocol_errors.rs  send_sync.rs  server_clients.rs  server_created_object.rs  server_global_filter.rs  server_global_post_error.rs  server_resources.rs  skel.rs  threads.rs  xdg_shell_ping.rs
(+21119 files in other folders)
