[package]
name = "wayland-test"
version = "0.0.1"
edition = "2018"
publish = false
autotests = false

[dependencies]
wayland-commons = { path = "./wayland-commons" }
wayland-cursor = { path = "./wayland-cursor" }
wayland-scanner = { path = "./wayland-scanner" }
wayland-client = { path = "./wayland-client", default-features = false }
wayland-server = { path = "./wayland-server", default-features = false }
wayland-protocols = { path = "./wayland-protocols", features = ["client", "server"] }
wayland-sys = { path = "./wayland-sys" }

[dev-dependencies]
difference = "2.0"
tempfile = ">=2.0, <4.0"
nix = "0.22"

[workspace]
members = [
    "wayland-sys",
    "wayland-scanner",
    "wayland-client",
    "wayland-server",
    "wayland-protocols",
    "wayland-commons",
    "wayland-cursor",
    "wayland-egl",
    "wayland-backend-sys",
    "wayland-backend-rs",
]

[features]
client_native = ["wayland-client/dlopen"]
server_native = ["wayland-server/dlopen"]
both_native = ["client_native", "server_native"]

# Manual list of the tests, required because some need `harness = false`

[[test]]
name = "attach_to_surface"

[[test]]
name = "client_connect_to_env"
harness = false

[[test]]
name = "client_connect_to_socket"
harness = false

[[test]]
name = "client_bad_requests"

[[test]]
name = "client_dispatch"

[[test]]
name = "client_multithread"

[[test]]
name = "client_proxies"

[[test]]
name = "destructors"

[[test]]
name = "dispatch_data"

[[test]]
name = "globals"

[[test]]
name = "protocol_errors"

[[test]]
name = "scanner"

[[test]]
name = "send_sync"

[[test]]
name = "server_created_object"

[[test]]
name = "server_clients"

[[test]]
name = "server_global_filter"

[[test]]
name = "server_resources"
