[package]
name = "wayland-backend-rs"
version = "0.1.0"
authors = ["Victor Berger <victor.berger@m4x.org>"]
edition = "2018"
repository = "https://github.com/smithay/wayland-rs"
documentation = "https://smithay.github.io/wayland-rs/wayland_backend_rs/"
license = "MIT"
categories = ["gui", "api-bindings"]
keywords = ["wayland"]
readme = "README.md"

[dependencies]
wayland-commons = { path = "../wayland-commons" }
nix = "0.22"
smallvec = "1.0"
log = "0.4"

[features]
client = []
server = []
