[package]
name = "wayland-backend"
version = "0.3.11"
authors = ["Elinor Berger <elinor@safaradeg.net>"]
edition = "2021"
rust-version = "1.65"
repository = "https://github.com/smithay/wayland-rs"
documentation = "https://docs.rs/wayland-backend/"
license = "MIT"
categories = ["gui", "api-bindings"]
keywords = ["wayland"]
description = "Low-level bindings to the Wayland protocol"
readme = "README.md"
build = "build.rs"

[dependencies]
wayland-sys = { version = "0.31.7", path = "../wayland-sys", features = [] }
log = { version = "0.4", optional = true }
scoped-tls = { version = "1.0", optional = true }
downcast-rs = "1.2"
raw-window-handle = { version = "0.5.0", optional = true }
rwh_06 = { package = "raw-window-handle", version = "0.6.0", optional = true }

[dependencies.smallvec]
version = "1.9"
# Some additional features can be enabled since wayland-rs requires at least Rust 1.65
features = [
    "union", # 1.49
    "const_generics", # 1.51
    "const_new", # 1.51
]

[dependencies.rustix]
version = "1.0.2"
features = [
    "event",
    "fs",
    "net",
    "process",
]

[build-dependencies]
cc = "1.0"

[dev-dependencies]
wayland-scanner = { path = "../wayland-scanner"}
wayland-sys = { path = "../wayland-sys", features = ["client", "server"] }
concat-idents = "1.1"
env_logger = "0.10"
scoped-tls = "1.0"

[features]
client_system = ["wayland-sys/client", "dep:scoped-tls"]
server_system = ["wayland-sys/server", "dep:scoped-tls"]
dlopen = ["wayland-sys/dlopen"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
