[package]
name = "wayland-client"
version = "0.30.2"
documentation = "https://docs.rs/wayland-client/"
repository = "https://github.com/smithay/wayland-rs"
authors = ["Elinor Berger <elinor@safaradeg.net>"]
license = "MIT"
edition = "2018"
rust-version = "1.65"
categories = ["gui", "api-bindings"]
keywords = ["wayland", "client"]
description = "Bindings to the standard C implementation of the wayland protocol, client side."
readme = "README.md"

[dependencies]
wayland-backend = { version = "0.3.0", path = "../wayland-backend" }
wayland-scanner = { version = "0.31.0", path = "../wayland-scanner" }
bitflags = "2"
nix = { version = "0.26.0", default-features = false }
log = { version = "0.4", optional = true }

[dev-dependencies]
wayland-protocols = { path = "../wayland-protocols", features = ["client"] }
futures-channel = "0.3.16"
futures-util = "0.3"
tempfile = "3.2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
