[package]
name = "wayland-commons"
version = "0.29.1"
authors = ["Victor Berger <victor.berger@m4x.org>"]
repository = "https://github.com/smithay/wayland-rs"
documentation = "https://smithay.github.io/wayland-rs/wayland_commons/"
description = "Common types and structures used by wayland-client and wayland-server."
license = "MIT"
edition = "2018"
categories = ["gui", "api-bindings"]
keywords = ["wayland"]
readme = "README.md"

[dependencies]
downcast-rs = "1.1"
proc-macro2 = "1.0.11"
quote = "1.0"
xml-rs = "0.8"