[package]
name = "wayland-commons"
version = "0.29.5"
authors = ["Victor Berger <victor.berger@m4x.org>"]
repository = "https://github.com/smithay/wayland-rs"
documentation = "https://smithay.github.io/wayland-rs/wayland_commons/"
description = "Common types and structures used by wayland-client and wayland-server."
license = "MIT"
edition = "2018"
categories = ["gui", "api-bindings"]
keywords = ["wayland"]
readme = "README.md"

[dependencies]
wayland-sys = { version = "0.29.5", path = "../wayland-sys" }
once_cell = "1.1"
smallvec = "1"

[dependencies.nix]
version = "0.24.1"
default-features = false
features = [
    "fs",
    "socket",
    "uio",
]
