[package]
name = "wayland-cursor"
version = "0.30.0"
documentation = "https://docs.rs/wayland-cursor/"
repository = "https://github.com/smithay/wayland-rs"
authors = ["Elinor Berger <elinor@safaradeg.net>"]
license = "MIT"
edition = "2018"
rust-version = "1.59"
categories = ["gui", "api-bindings"]
keywords = ["wayland", "client"]
description = "Bindings to libwayland-cursor."
readme = "README.md"

[dependencies]
wayland-client = { version = "0.30.0", path = "../wayland-client" }
xcursor = "0.3.1"
nix = { version = "0.26.0", default-features = false, features = ["mman"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
