[package]
name = "wayland-egl"
version = "0.32.8"
documentation = "https://docs.rs/wayland-egl/"
repository = "https://github.com/smithay/wayland-rs"
authors = ["Elinor Berger <elinor@safaradeg.net>"]
license = "MIT"
edition = "2021"
rust-version = "1.65"
categories = ["gui", "api-bindings"]
keywords = ["wayland", "client"]
description = "Bindings to libwayland-egl."
readme = "README.md"

[dependencies]
wayland-backend = { version = "0.3.11", path = "../wayland-backend", features = ["client_system"] }
wayland-sys = { version = "0.31.7", path="../wayland-sys", features = ["egl"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
