[package]
name = "wayland-egl"
version = "0.32.9"
documentation = "https://docs.rs/wayland-egl/"
repository = "https://github.com/smithay/wayland-rs"
authors = ["Elinor Berger <elinor@safaradeg.net>"]
license = "MIT"
edition = "2021"
rust-version = "1.71"
categories = ["gui", "api-bindings"]
keywords = ["wayland", "client"]
description = "Bindings to libwayland-egl."
readme = "README.md"

[dependencies]
wayland-backend = { version = "0.3.12", path = "../wayland-backend", features = ["client_system"] }
wayland-sys = { version = "0.31.8", path="../wayland-sys", features = ["egl"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
