[package]
name = "wayland-egl"
version = "0.32.11"
documentation = "https://docs.rs/wayland-egl/"
repository = "https://github.com/smithay/wayland-rs"
authors = ["Elinor Berger <elinor@safaradeg.net>"]
license = "MIT"
edition = "2024"
rust-version = "1.86"
categories = ["gui", "api-bindings"]
keywords = ["wayland", "client"]
description = "Bindings to libwayland-egl."
readme = "README.md"

[dependencies]
wayland-backend = { version = "0.3.15", path = "../wayland-backend", features = ["client_system"] }
wayland-sys = { version = "0.31.11", path="../wayland-sys", features = ["egl"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
