[package]
name = "wayland-protocols-plasma"
version = "0.1.0-dev"
documentation = "https://docs.rs/wayland-protocols-plasma/"
repository = "https://github.com/smithay/wayland-rs"
authors = ["Victor Berger <victor.berger@m4x.org>"]
license = "MIT"
keywords = ["wayland", "client", "server", "protocol", "extension"]
description = "Generated API for the Plasma wayland protocol extensions"
categories = ["gui", "api-bindings"]
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wayland-scanner = { version = "0.30.0-alpha10", path = "../wayland-scanner" }
wayland-backend = { version = "0.1.0-alpha10", path = "../wayland-backend" }
wayland-client = { version = "0.30.0-alpha10", path = "../wayland-client", optional = true }
wayland-server = { version = "0.30.0-alpha10", path = "../wayland-server", optional = true }
wayland-protocols = { version = "0.30.0-alpha10", path = "../wayland-protocols"}
bitflags = "1.0"

[features]
client = ["wayland-client", "wayland-protocols/client"]
server = ["wayland-server", "wayland-protocols/server"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]