[package]
name = "wayland-protocols"
version = "0.31.2"
documentation = "https://docs.rs/wayland-protocols/"
repository = "https://github.com/smithay/wayland-rs"
authors = ["Elinor Berger <elinor@safaradeg.net>"]
license = "MIT"
keywords = ["wayland", "client", "server", "protocol", "extension"]
description = "Generated API for the officials wayland protocol extensions"
categories = ["gui", "api-bindings"]
edition = "2021"
rust-version = "1.65"
readme = "README.md"

[dependencies]
wayland-scanner = { version = "0.31.0", path = "../wayland-scanner" }
wayland-backend = { version = "0.3.0", path = "../wayland-backend" }
wayland-client = { version = "0.31.0", path = "../wayland-client", optional = true }
wayland-server = { version = "0.31.0", path = "../wayland-server", optional = true }
bitflags = "2"

[features]
client = ["wayland-client"]
server = ["wayland-server"]
staging = []
unstable = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
