[package]
name = "wayland-protocols"
version = "0.32.8"
documentation = "https://docs.rs/wayland-protocols/"
repository = "https://github.com/smithay/wayland-rs"
authors = ["Elinor Berger <elinor@safaradeg.net>"]
license = "MIT"
keywords = ["wayland", "client", "server", "protocol", "extension"]
description = "Generated API for the officials wayland protocol extensions"
categories = ["gui", "api-bindings"]
edition = "2021"
rust-version = "1.65"
readme = "README.md"
include = [
        "src/**/*.rs",
        "Cargo.toml",
        "README.md",
        "LICENSE.txt",
        "./protocols/staging/xwayland-shell/xwayland-shell-v1.xml",
        "protocols/unstable/xwayland-keyboard-grab/xwayland-keyboard-grab-unstable-v1.xml",
        "protocols/staging/xdg-activation/xdg-activation-v1.xml",
        "protocols/unstable/xdg-decoration/xdg-decoration-unstable-v1.xml",
        "protocols/unstable/xdg-foreign/xdg-foreign-unstable-v1.xml",
        "protocols/unstable/xdg-foreign/xdg-foreign-unstable-v2.xml",
        "protocols/unstable/xdg-output/xdg-output-unstable-v1.xml",
        "protocols/stable/xdg-shell/xdg-shell.xml",
        "protocols/staging/xdg-toplevel-drag/xdg-toplevel-drag-v1.xml",
        "protocols/staging/xdg-dialog/xdg-dialog-v1.xml",
        "protocols/staging/xdg-toplevel-icon/xdg-toplevel-icon-v1.xml",
        "protocols/staging/xdg-toplevel-tag/xdg-toplevel-tag-v1.xml",
        "protocols/staging/xdg-system-bell/xdg-system-bell-v1.xml",
        "protocols/staging/content-type/content-type-v1.xml",
        "protocols/staging/color-management/color-management-v1.xml",
        "protocols/staging/color-representation/color-representation-v1.xml",
        "protocols/staging/drm-lease/drm-lease-v1.xml",
        "protocols/staging/tearing-control/tearing-control-v1.xml",
        "protocols/staging/fractional-scale/fractional-scale-v1.xml",
        "protocols/unstable/fullscreen-shell/fullscreen-shell-unstable-v1.xml",
        "protocols/unstable/idle-inhibit/idle-inhibit-unstable-v1.xml",
        "protocols/unstable/input-method/input-method-unstable-v1.xml",
        "protocols/unstable/input-timestamps/input-timestamps-unstable-v1.xml",
        "protocols/unstable/keyboard-shortcuts-inhibit/keyboard-shortcuts-inhibit-unstable-v1.xml",
        "protocols/stable/linux-dmabuf/linux-dmabuf-v1.xml",
        "protocols/unstable/linux-explicit-synchronization/linux-explicit-synchronization-unstable-v1.xml",
        "protocols/staging/linux-drm-syncobj/linux-drm-syncobj-v1.xml",
        "protocols/unstable/pointer-constraints/pointer-constraints-unstable-v1.xml",
        "protocols/unstable/pointer-gestures/pointer-gestures-unstable-v1.xml",
        "protocols/stable/presentation-time/presentation-time.xml",
        "protocols/unstable/primary-selection/primary-selection-unstable-v1.xml",
        "protocols/unstable/relative-pointer/relative-pointer-unstable-v1.xml",
        "protocols/staging/single-pixel-buffer/single-pixel-buffer-v1.xml",
        "protocols/staging/cursor-shape/cursor-shape-v1.xml",
        "protocols/unstable/tablet/tablet-unstable-v1.xml",
        "protocols/unstable/tablet/tablet-unstable-v2.xml",
        "protocols/unstable/text-input/text-input-unstable-v1.xml",
        "protocols/unstable/text-input/text-input-unstable-v3.xml",
        "protocols/stable/viewporter/viewporter.xml",
        "protocols/staging/security-context/security-context-v1.xml",
        "protocols/staging/alpha-modifier/alpha-modifier-v1.xml",
        "protocols/staging/fifo/fifo-v1.xml",
        "protocols/staging/commit-timing/commit-timing-v1.xml",
        "protocols/staging/pointer-warp/pointer-warp-v1.xml",
        "protocols/staging/ext-idle-notify/ext-idle-notify-v1.xml",
        "protocols/staging/ext-session-lock/ext-session-lock-v1.xml",
        "protocols/staging/ext-foreign-toplevel-list/ext-foreign-toplevel-list-v1.xml",
        "protocols/staging/ext-transient-seat/ext-transient-seat-v1.xml",
        "protocols/staging/ext-image-capture-source/ext-image-capture-source-v1.xml",
        "protocols/staging/ext-image-copy-capture/ext-image-copy-capture-v1.xml",
        "protocols/staging/ext-data-control/ext-data-control-v1.xml",
        "protocols/staging/ext-workspace/ext-workspace-v1.xml",
        "protocols/staging/ext-background-effect/ext-background-effect-v1.xml",
        "protocols/staging/xwayland-shell/xwayland-shell-v1.xml",
]

[dependencies]
wayland-scanner = { version = "0.31.6", path = "../wayland-scanner" }
wayland-backend = { version = "0.3.10", path = "../wayland-backend" }
wayland-client = { version = "0.31.10", path = "../wayland-client", optional = true }
wayland-server = { version = "0.31.9", path = "../wayland-server", optional = true }
bitflags = "2"

[features]
client = ["wayland-client"]
server = ["wayland-server"]
staging = []
unstable = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
