[package]
name = "wayland-scanner"
version = "0.29.5"
authors = ["Victor Berger <victor.berger@m4x.org>"]
repository = "https://github.com/smithay/wayland-rs"
documentation = "https://smithay.github.io/wayland-rs/wayland_scanner/"
description = "Wayland Scanner for generating rust APIs from XML wayland protocol files. Intended for use with wayland-sys. You should only need this crate if you are working on custom wayland protocol extensions. Look at the crate wayland-client for usable bindings."
license = "MIT"
categories = ["gui", "api-bindings"]
keywords = ["wayland", "codegen"]
edition = "2018"
readme = "README.md"

[dependencies]
proc-macro2 = "1.0.11"
quote = "1.0"
xml-rs = ">=0.7, <0.9"
