[package]
name = "wayland-server"
version = "0.30.1"
documentation = "https://docs.rs/wayland-server/"
repository = "https://github.com/smithay/wayland-rs"
authors = ["Elinor Berger <elinor@safaradeg.net>"]
license = "MIT"
categories = ["gui", "api-bindings"]
keywords = ["wayland", "server", "compositor"]
description = "Bindings to the standard C implementation of the wayland protocol, server side."
edition = "2018"
rust-version = "1.65"
readme = "README.md"

[dependencies]
wayland-backend = { version = "0.3.0", path = "../wayland-backend" }
wayland-scanner = { version = "0.30.0", path = "../wayland-scanner" }
bitflags = "2"
log = { version = "0.4", optional = true }
nix = { version = "0.26.0", default-features = false }
downcast-rs = "1.2"
io-lifetimes = "2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
