[package]
name = "wayland-server"
version = "0.31.10"
documentation = "https://docs.rs/wayland-server/"
repository = "https://github.com/smithay/wayland-rs"
authors = ["Elinor Berger <elinor@safaradeg.net>"]
license = "MIT"
categories = ["gui", "api-bindings"]
keywords = ["wayland", "server", "compositor"]
description = "Bindings to the standard C implementation of the wayland protocol, server side."
edition = "2021"
rust-version = "1.65"
readme = "README.md"

[dependencies]
wayland-backend = { version = "0.3.11", path = "../wayland-backend" }
wayland-scanner = { version = "0.31.7", path = "../wayland-scanner" }
bitflags = "2"
log = { version = "0.4", optional = true }
downcast-rs = "1.2"
rustix = { version = "1.0.2", features = ["fs"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
